# fraud_mlops

./: .gitignore  README.md  eda.ipynb  eval.sh  force.md  model_train.py  pyproject.toml  setup.sh  train.sh
.github/workflows/: pr-checks.yml
data/: X_val.csv  synthetic_fraud_dataset_predict_on.csv  y_val.csv
notebooks/: eda.ipynb  predict.ipynb
scripts/: model_config.py  model_eval.py  model_train.py
scripts/utils/: data_pipeline.py
tests/: test_data_pipeline.py
utils/: data_pipeline.py
