[project]
name = "continuum-xgboost"
version = "0.1.0"
description = ""
authors = [
    {name = "michaelstvnhodge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "uv (>=0.6.9,<0.7.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mlflow (>=2.21.0,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
