[project]
name = "fraud_mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "michaelstvnhodge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xgboost (>=3.0.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "uv (>=0.6.9,<0.7.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mlflow (>=2.21.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "bandit (>=1.8.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
